--- a/css/css.css
+++ b/css/css.css
@@ -152,7 +152,7 @@ li{list-style: none}
 	font-size: 3em;
 	text-align: center;
 	color: #eee;
-	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif"
+	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
 }
 
 .remainTime{
@@ -204,6 +204,7 @@ li{list-style: none}
 	animation: scale 4s ease both;
 	position: absolute;
 	opacity: 0;
+	text-align: center;
 }
 
 .blessing h1:nth-of-type(1){
@@ -227,6 +228,20 @@ body>p{
 	color: red;
 	display: none;
 	cursor: pointer;
+}
+
+canvas{ 
+  display: block;
+  vertical-align: bottom;
+}
+/* ---- particles.js container ---- */ 
+.pages{ 
+  position:absolute; 
+  top:0;
+  left:0;
+  width: 100%; 
+  height: 100%; 
+  z-index:0;
 }
 
 @keyframes scale{
