--- a/css/css.css
+++ b/css/css.css
@@ -205,19 +205,9 @@ li{list-style: none}
 	position: absolute;
 	opacity: 0;
 	text-align: center;
+	animation-delay: calc(3.5s * var(--i));
 }
 
-.blessing h1:nth-of-type(1){
-	animation-delay: 1s
-}
-
-.blessing h1:nth-of-type(2){
-	animation-delay: 4.5s
-}
-
-.blessing h1:nth-of-type(3){
-	animation-delay: 7.5s
-}
 
 body>p{
 	position: fixed;
@@ -344,4 +334,48 @@ canvas{
 	.go{
 		font-size: 1.7em;
 	}
+}
+
+.name{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100vw;
+	height: 100vh;
+	flex-direction: column;
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: -100%;
+}
+
+.name>h1{
+	text-align: center;
+	font-size: 30px;
+	color: white;
+	margin-bottom: 20px;
+}
+
+.name>input{
+	border: none;
+	background:  rgba(232,69,32,0.8);
+	height: 50px;
+	width: 300px;
+	border-radius: 20px;
+	color: white;
+	padding-left: 10px;
+	outline: none;
+}
+
+.name>button{
+	width: 100px;
+	height: 40px;
+	color: white;
+	font-size: 24px;
+	border-radius: 5px;
+	cursor: pointer;
+	background: rgba(209,19,23,1.00);
+	border: none;
+	padding: 5px 10px;
+	margin-top: 20px;
 }
